<resources>
    <string name="app_name">testSider</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_additional">More</string>

    <string name="menu_language">Language</string>
    <string name="menu_slideshow">Search</string>
    <string name="hourly_weather_forecast">Hourly weather forecast</string>
    <string name="km">km/h</string>
    <string name="gust">Gust</string>
    <string name="humidity">Humidity</string>
    <string name="precipitation_probability">POP</string>
    <string name="cloud">Cloud coverage</string>
    <string name="visibility">Visibility</string>
    <string name="pressure_msl">Sea Level Pressure</string>
    <string name="apparent_temp">Apparent Temp</string>

    <string name="ultraviolet">UV Index</string>
    <string name="precipitation">Precipitation</string>

</resources>