<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.testsider.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_additional"
        android:name="com.example.testsider.ui.additional.additionalFragment"
        android:label="@string/menu_additional"
        tools:layout="@layout/fragment_additional" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.testsider.ui.Language.LanguageFragment"
        android:label="@string/menu_language"
        tools:layout="@layout/fragment_language" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.testsider.ui.slideshow.TravelFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_travel" />
</navigation>