<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".ui.additional.additionalFragment">

    <LinearLayout
        android:layout_width="380dp"
        android:layout_height="195dp"
        android:orientation="horizontal"
        android:paddingTop="20dp">

        <LinearLayout
            android:layout_width="185dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingHorizontal="10dp">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="185dp"
                android:layout_height="120dp"
                android:layout_gravity="left"
                android:src="@drawable/apparent_temp" />

            <TextView
                android:layout_width="185dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/apparent_temp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="22dp" />

            <TextView
                android:id="@+id/a_temp"
                android:layout_width="185dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="25°C"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="185dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingHorizontal="10dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="185dp"
                android:layout_height="120dp"
                android:src="@drawable/uv" />

            <TextView
                android:layout_width="185dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/ultraviolet"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="22dp" />

            <TextView
                android:id="@+id/uv_index"
                android:layout_width="185dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="9"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="22dp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="195dp"
        android:orientation="horizontal"
        android:paddingTop="20dp">

        <LinearLayout
            android:layout_width="195dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="185dp"
                android:layout_height="110dp"
                android:src="@drawable/pic60" />

            <TextView
                android:layout_width="185dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/cloud"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="22dp" />

            <TextView
                android:id="@+id/cloud"
                android:layout_width="185dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="80%"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="22dp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="180dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="180dp"
                android:layout_height="110dp"
                android:src="@drawable/sea_level_pressure" />

            <TextView
                android:layout_width="185dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/pressure_msl"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/sea_level"
                android:layout_width="185dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="60%"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="22dp" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="380dp"
        android:layout_height="220dp"
        android:orientation="horizontal"
        android:paddingTop="20dp">

        <LinearLayout
            android:layout_width="185dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingHorizontal="10dp">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="180dp"
                android:layout_height="110dp"
                android:src="@drawable/surface_pressure" />

            <TextView
                android:layout_width="185dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/visibility"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="22dp" />

            <TextView
                android:id="@+id/visibility"
                android:layout_width="185dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="60%"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="22dp" />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>