<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment"
    android:background="@drawable/background"
    android:orientation="vertical">



<!--    <ImageView-->
<!--        android:id="@+id/sidebar"-->
<!--        android:layout_width="30dp"-->
<!--        android:layout_height="30dp"-->
<!--        android:src="@drawable/sidebar" />-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/today"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Mon | 25 March 2024"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="00:21"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="32dp" />

            <ImageView
                android:id="@+id/weathericon"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:src="@drawable/pic60" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Space
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:src="@drawable/up" />

                <TextView
                    android:id="@+id/instant_temp_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="30°C"
                    android:textAlignment="textStart"
                    android:textColor="@color/white"
                    android:textSize="20dp" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:src="@drawable/down" />

                <TextView
                    android:id="@+id/instant_temp_down"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="23°C"
                    android:textAlignment="textStart"
                    android:textColor="@color/white"
                    android:textSize="20dp" />

                <Space
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </LinearLayout>

<!--            <TextView-->
<!--                android:id="@+id/instant_temp_avg"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="52dp"-->
<!--                android:layout_weight="1"-->
<!--                android:shadowColor="#777777"-->
<!--                android:shadowDx="4"-->
<!--                android:shadowDy="4"-->
<!--                android:shadowRadius="4"-->
<!--                android:text="24.2°C"-->
<!--                android:textAlignment="center"-->
<!--                android:textColor="@color/white"-->
<!--                android:textSize="46dp" />-->
            <TextView
                android:id="@+id/instant_temp_current"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_weight="1"
                android:shadowColor="#777777"
                android:shadowDx="4"
                android:shadowDy="4"
                android:shadowRadius="4"
                android:text="24.2°C"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="46dp" />


<!--            <LinearLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:orientation="horizontal">-->

<!--                <Space-->
<!--                    android:layout_width="30dp"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_weight="1" />-->

<!--                <ImageView-->
<!--                    android:layout_width="30dp"-->
<!--                    android:layout_height="30dp"-->
<!--                    android:layout_weight="1"-->
<!--                    android:src="@drawable/location" />-->

<!--                <TextView-->
<!--                    android:id="@+id/current_location"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="32dp"-->
<!--                    android:layout_weight="1"-->
<!--                    android:gravity="center_vertical"-->
<!--                    android:text=" Kowloon, Hong Kong"-->
<!--                    android:textAlignment="textStart"-->
<!--                    android:textColor="@color/white"-->
<!--                    android:textSize="20dp" />-->

<!--                <Button-->
<!--                    android:id="@+id/button_location"-->
<!--                    android:layout_width="10dp"-->
<!--                    android:layout_height="30dp"-->
<!--                    android:layout_weight="1"-->
<!--                    android:background="@android:drawable/ic_menu_rotate" />-->

<!--                <Space-->
<!--                    android:layout_width="30dp"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_weight="1" />-->

<!--            </LinearLayout>-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="5dp"
                android:background="@drawable/cardbg"
                android:orientation="horizontal"
                android:paddingTop="20dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingHorizontal="10dp">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/gust" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/gust"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="16dp" />
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:orientation="horizontal">
                                    <TextView
                                        android:id="@+id/gust"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:gravity="center_vertical"
                                        android:text="6"
                                        android:textAlignment="center"
                                        android:textColor="@color/white"
                                        android:textSize="15dp" />
                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/km"
                                        android:textColor="@color/white"
                                        android:textSize="15dp" />
                        </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingHorizontal="10dp">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/humidity" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/humidity"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="16dp" />

                    <TextView
                        android:id="@+id/humidity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="90%"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="15dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingHorizontal="10dp">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/pic62" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/precipitation_probability"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="16dp" />

                    <TextView
                        android:id="@+id/precipitation_probability"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="90%"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="15dp" />
                </LinearLayout>



                </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:layout_marginHorizontal="20dp"
               >
                <TextView
                    android:id="@+id/hourly_weather_forecast"
                    android:textSize="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hourly_weather_forecast"/>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="248dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="5dp"
                android:background="@drawable/cardbg"
                app:layoutManager="LinearLayoutManager"
                android:orientation="vertical">



            </androidx.recyclerview.widget.RecyclerView>

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
