<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.slideshow.SlideshowFragment">

    <ScrollView android:layout_width="match_parent" android:layout_height="wrap_content" tools:ignore="MissingConstraints">
        <LinearLayout android:id="@+id/homepage" android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical">
            <TextView android:id="@+id/today" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="1" android:text="Mon | 25 March 2024" android:textAlignment="center" android:textColor="@color/white" android:textSize="16dp"/>
            <ImageView android:id="@+id/weathericon" android:layout_width="match_parent" android:layout_height="170dp" android:layout_weight="1" android:src="@drawable/pic60"/>
            <TextView android:id="@+id/avgtemp" android:layout_width="match_parent" android:layout_height="52dp" android:layout_weight="1" android:shadowColor="#777777" android:shadowDx="4" android:shadowDy="4" android:shadowRadius="4" android:text="24.2°C" android:textAlignment="center" android:textColor="@color/white" android:textSize="46dp"/>
            <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:layout_weight="1" android:orientation="horizontal">
                <Space android:layout_width="100dp" android:layout_height="wrap_content" android:layout_weight="1"/>
                <ImageView android:layout_width="20dp" android:layout_height="20dp" android:layout_gravity="center_vertical" android:layout_weight="1" android:src="@drawable/up"/>
                <TextView android:id="@+id/instant_temp_up" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1" android:text="30°C" android:textAlignment="textStart" android:textColor="@color/white" android:textSize="20dp"/>
                <ImageView android:layout_width="20dp" android:layout_height="20dp" android:layout_gravity="center_vertical" android:layout_weight="1" android:src="@drawable/down"/>
                <TextView android:id="@+id/instant_temp_down" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1" android:text="23°C" android:textAlignment="textStart" android:textColor="@color/white" android:textSize="20dp"/>
                <Space android:layout_width="100dp" android:layout_height="wrap_content" android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout android:layout_width="match_parent" android:layout_height="70dp" android:layout_weight="1" android:orientation="horizontal">
                <Space android:layout_width="30dp" android:layout_height="wrap_content" android:layout_weight="1"/>
                <ImageView android:id="@+id/icon" android:layout_width="50dp" android:layout_height="50dp" android:layout_weight="1" android:src="@drawable/location"/>
                <EditText android:id="@+id/search" android:layout_width="90dp" android:layout_height="60dp" android:layout_weight="1" android:ems="10" android:inputType="text" android:text="Hong Kong" android:textSize="20sp"/>
                <Button android:id="@+id/button" android:layout_width="70dp" android:layout_height="60dp" android:layout_weight="1" android:fontFamily="sans-serif" android:text="Search"/>
                <Space android:layout_width="30dp" android:layout_height="wrap_content" android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout android:layout_width="match_parent" android:layout_height="141dp" android:layout_marginHorizontal="20dp" android:layout_marginVertical="5dp" android:background="@drawable/cardbg" android:baselineAligned="true" android:orientation="horizontal" android:paddingTop="20dp">
                <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1" android:orientation="vertical" android:paddingHorizontal="10dp">
                    <ImageView android:id="@+id/gusticon" android:layout_width="50dp" android:layout_height="50dp" android:layout_gravity="center_horizontal" android:src="@drawable/gust"/>
                    <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/gust" android:textAlignment="center" android:textColor="@color/white" android:textSize="16dp"/>
                    <TextView android:id="@+id/gust" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="6 km/h" android:textAlignment="center" android:textColor="@color/white" android:textSize="20dp"/>
                </LinearLayout>
                <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1" android:orientation="vertical" android:paddingHorizontal="10dp">
                    <ImageView android:layout_width="50dp" android:layout_height="50dp" android:layout_gravity="center_horizontal" android:src="@drawable/humidity"/>
                    <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/humidity" android:textAlignment="center" android:textColor="@color/white" android:textSize="16dp"/>
                    <TextView android:id="@+id/humidity" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="90%" android:textAlignment="center" android:textColor="@color/white" android:textSize="20dp"/>
                </LinearLayout>
                <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1" android:orientation="vertical" android:paddingHorizontal="10dp">
                    <ImageView android:layout_width="50dp" android:layout_height="50dp" android:layout_gravity="center_horizontal" android:src="@drawable/precipitation"/>
                    <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:gravity="center_vertical" android:text="@string/precipitation" android:textColor="@color/white" android:textSize="16dp"/>
                    <TextView android:id="@+id/precipitation" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="0mm" android:textAlignment="center" android:textColor="@color/white" android:textSize="20sp"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:layout_weight="1" android:orientation="vertical">
                <LinearLayout android:id="@+id/forcast1" android:layout_width="370dp" android:layout_height="60dp" android:layout_gravity="center_horizontal" android:layout_marginHorizontal="20dp" android:layout_marginBottom="5dp" android:background="@drawable/cardbg" android:gravity="center" android:orientation="horizontal" tools:layout_marginHorizontal="30dp">
                    <TextView android:id="@+id/date1" android:layout_width="80dp" android:layout_height="wrap_content" android:layout_marginStart="8dp" android:text="10/4/2024" android:textColor="@color/white" tools:textSize="14sp"/>
                    <ImageView android:id="@+id/pic1" android:layout_width="45dp" android:layout_height="45dp" android:layout_marginStart="32dp" tools:srcCompat="@drawable/pic61"/>
                    <TextView android:id="@+id/status1" android:layout_width="50dp" android:layout_height="wrap_content" android:layout_marginStart="16dp" android:text="Cloudy" android:textColor="@color/white"/>
                    <TextView android:id="@+id/high1" android:layout_width="50dp" android:layout_height="wrap_content" android:layout_marginEnd="32dp" android:text="20°C" android:textAlignment="center" android:textColor="@color/white" android:textSize="16sp"/>
                    <TextView android:id="@+id/low1" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginEnd="8dp" android:text="10°C" android:textAlignment="center" android:textColor="@color/white" android:textSize="16sp"/>
                </LinearLayout>
                <LinearLayout android:id="@+id/forcast2" android:layout_width="370dp" android:layout_height="60dp" android:layout_gravity="center_horizontal" android:layout_marginHorizontal="20dp" android:layout_marginBottom="5dp" android:background="@drawable/cardbg" android:gravity="center" android:orientation="horizontal" tools:layout_marginHorizontal="30dp">
                    <TextView android:id="@+id/date2" android:layout_width="80dp" android:layout_height="wrap_content" android:layout_marginStart="8dp" android:text="10/4/2024" android:textColor="@color/white" tools:textSize="14sp"/>
                    <ImageView android:id="@+id/pic2" android:layout_width="45dp" android:layout_height="45dp" android:layout_marginStart="32dp" tools:srcCompat="@drawable/pic61"/>
                    <TextView android:id="@+id/status2" android:layout_width="50dp" android:layout_height="wrap_content" android:layout_marginStart="16dp" android:text="Cloudy" android:textColor="@color/white"/>
                    <TextView android:id="@+id/high2" android:layout_width="50dp" android:layout_height="wrap_content" android:layout_marginEnd="32dp" android:text="20°C" android:textAlignment="center" android:textColor="@color/white" android:textSize="16sp"/>
                    <TextView android:id="@+id/low2" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginEnd="8dp" android:text="10°C" android:textAlignment="center" android:textColor="@color/white" android:textSize="16sp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>